# python-web-api-nitric

./: .gitignore  AWS_DEPLOYMENT_SETUP.md  DEPLOYMENT.md  EXAMPLES.md  LICENSE  README.md  SUMMARY.md  SWAGGER.md  nitric.aws.yaml  nitric.yaml  pyproject.toml  python.dockerfile  python.dockerfile.dockerignore  requirements.txt
.github/workflows/: deploy-aws.yml
services/: api.py
