[project]
name = "python-web-api-nitric"
version = "1.0.0"
description = "A Python web API example using Nitric framework for AWS deployment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nitric>=1.2.3",
    "betterproto>=2.0.0b6"
]

[tool.uv]
dev-dependencies = [
    "watchdog>=5.0.3",
]
